--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,5 +12,8 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "gsap": "^3.9.1"
   }
 }
