--- a/my-project/package.json
+++ b/my-project/package.json
@@ -10,7 +10,10 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.22",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "gsap": "^3.9.1"
   }
 }
